# dorplan

./: pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  pythonpackage.yml
dorplan/: app.py  cli.py  optimworker.py  repWorker.py
dorplan/tests/: test_app.py  test_cli.py
dorplan/tests/data/graph_coloring/solvers/: logging.conf  mip_model.py
dorplan/ui/: gui.py  gui.ui
